[Front & Back] Basic Upload functionality
