# DotBelt.Frontend/src/routes/(private)/my-admin/posts/new/+page.server.ts
@@ -1,15 +1,15 @@
-import {getApolloClient} from "$lib/API/GraphQL/apolloClient";
 import {createPost} from "$lib/Content/Posts/CreatePost";
 import {type Create_PostRequestInput, PostTypeEnum} from "$lib/API/GraphQL/generated";
 import type {Actions} from "@sveltejs/kit";
+import {getApolloSSRClient} from "$lib/API/GraphQL/apolloSSRClient";
 
 export const actions = {
-  default: async (event) => {
-    const apollo = getApolloClient();
+  default: async ({fetch, request, url}) => {
+    const apollo = getApolloSSRClient(fetch);
 
-    const postType = event.url.searchParams.get("type");
+    const postType = url.searchParams.get("type");
 
-    const formData = await event.request.formData();
+    const formData = await request.formData();
     const input: Create_PostRequestInput = Object.fromEntries(formData.entries()) as Create_PostRequestInput;
 
     if(postType !== null) {
