# DotBelt/DotBelt.CMS.Shared/Content/Post/Create.PostRequest.cs
@@ -1,3 +1,3 @@
 namespace DotBelt.Queries;
 
-public record Create_PostRequest(string? Title, string? Description, string? UrlName, string Content);
+public record Create_PostRequest(string? Title, string? Description, string? RelativeUrl, string Content);
