# DotBelt/DotBelt.CMS.Shared/Content/Post/Edit.PostRequest.cs
@@ -1,3 +1,3 @@
 namespace DotBelt.QueriesMutations.Posts;
 
-public record Edit_PostRequest(string? Title, string? Description, string? UrlName, string Content);
+public record Edit_PostRequest(string? Title, string? Description, string? RelativeUrl, string Content);
